tests/ui/transparent/enum_variant_no_fields.rs
use masterror::Error;

#[derive(Debug, Error)]
enum TransparentEnumUnit {
    #[error(transparent)]
    Variant
}
